--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 		    border: 1px solid black;
 		    width: 100%;
 		    height: 500px;
-		    border-shadow: 15px black;
+		    box-shadow: 10px 5px 5px Black;
 		}
 
 		input {
-		    width: 90%;
-		    color: red;
-		    background-color: black;
+		    width: 80%;
+		    color: Black;
+		    background-color: White;
 		    border: 1px solid Black;
+		    box-shadow: 10px 5px 5px Black;
 		    border-radius: 15px;
 		    margin-left: 15px;
 		}
@@ -20,11 +21,8 @@
 		    color: red;
 		    background-color: black;
 		    border: 1px solid Black;
+		    box-shadow: 10px 5px 5px Black;
 		    border-radius: 15px;
-		}
-
-		body {
-		    background-color: gray;
 		}
 	</style>
 
